Modification position animation chargement ==> fixed + z-index chargement et img + .nouveau pour eviter leur visibilité lors du chargement

--- a/css/_chargement-page.scss
+++ b/css/_chargement-page.scss
@@ -2,7 +2,7 @@
     animation-name:chargement ;
     animation-duration: 3s;
     animation-fill-mode: forwards;
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     height: 100vh;
